<resources>
    <string name="app_name">Sudoku Supreme</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string translatable="false" name="banner_ad_unit_id_main">ca-app-pub-6148517439938867/3386813107</string>
    <string translatable="false" name="banner_ad_unit_id_difficulty">ca-app-pub-6148517439938867/6830114532</string>
    <string translatable="false" name="banner_ad_unit_id_game">ca-app-pub-6148517439938867/2801625214</string>

    <string translatable="false" name="game_services_project_id">833068304386</string>

    <string name="new_game">New Game</string>
    <string name="stats">Stats</string>
    <string name="leaderboard">Leaderboards</string>
    <string name="achievements">Achievements</string>
    <string name="signin">Sign in</string>
    <string name="go_back">Go Back</string>
    <string name="go_home">Go Home</string>

    <string name="game_stats">Game Stats</string>
    <string name="clear_stats">Clear Stats</string>
    <string name="best_time">Best Time: %1$02d\:%2$02d</string>
    <string name="no_best_time">Best Time:</string>
    <string name="average_time">Average Time: %1$02d:%2$02d</string>
    <string name="no_average_time">Average Time:</string>
    <string name="win_percentage">Win Percentage: %1$d%%</string>
    <string name="games_won">Games Won: %1$d</string>
    <string name="games_played">Games Played: %1$d</string>
    <string name="game_won">Game Won</string>
    <string name="game_lost">Game Lost</string>

    <string name="continue_game">Continue by watching an ad?</string>

    <string name="level">Level: %1$d</string>
    <string name="experience">Experience: %1$d/100</string>

    <string name="choose_difficulty">Choose Difficulty</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="expert">Expert</string>

    <string name="game_won_message">Game Won! Time: %1$02d:%2$02d</string>

    <string name="mistakes">Mistakes: %1$d/3</string>
    <string name="hints">Hints: %1$d/1</string>
    <string name="timer">%1$02d:%2$02d</string>

    <string name="butt1">1</string>
    <string name="butt2">2</string>
    <string name="butt3">3</string>
    <string name="butt4">4</string>
    <string name="butt5">5</string>
    <string name="butt6">6</string>
    <string name="butt7">7</string>
    <string name="butt8">8</string>
    <string name="butt9">9</string>
    <string name="butt_note">Note</string>
    <string name="butt_del"> Del </string>
    <string name="butt_hint">Hint</string>

    <string name="cell_description">Subgrid %1$d, cell %2$d, filled number: %3$d</string>


    <!-- Google Play Games Resources -->
    <string name="achievement_first_win" translatable="false">CgkIgpD2tZ8YEAIQBQ</string>
    <!--achievement Win 10 games-->
    <string name="achievement_win_10_games" translatable="false">CgkIgpD2tZ8YEAIQBg</string>
    <!--achievement Win 50 games-->
    <string name="achievement_win_50_games" translatable="false">CgkIgpD2tZ8YEAIQBw</string>
    <!--achievement Win 100 games-->
    <string name="achievement_win_100_games" translatable="false">CgkIgpD2tZ8YEAIQCA</string>
    <!--achievement Win a hard game-->
    <string name="achievement_win_a_hard_game" translatable="false">CgkIgpD2tZ8YEAIQCQ</string>
    <!--achievement Win 10 hard games-->
    <string name="achievement_win_10_hard_games" translatable="false">CgkIgpD2tZ8YEAIQDw</string>
    <!--achievement Win 50 hard games-->
    <string name="achievement_win_50_hard_games" translatable="false">CgkIgpD2tZ8YEAIQEA</string>
    <!--achievement Win 100 hard games-->
    <string name="achievement_win_100_hard_games" translatable="false">CgkIgpD2tZ8YEAIQEQ</string>
    <!--achievement Win an extreme game-->
    <string name="achievement_win_an_extreme_game" translatable="false">CgkIgpD2tZ8YEAIQCg</string>
    <!--achievement Win 10 extreme games-->
    <string name="achievement_win_10_extreme_games" translatable="false">CgkIgpD2tZ8YEAIQEg</string>
    <!--achievement Win 50 extreme games-->
    <string name="achievement_win_50_extreme_games" translatable="false">CgkIgpD2tZ8YEAIQEw</string>
    <!--achievement Win 100 extreme games-->
    <string name="achievement_win_100_extreme_games" translatable="false">CgkIgpD2tZ8YEAIQFA</string>
    <!--achievement Total playtime of one hour-->
    <string name="achievement_total_playtime_of_one_hour" translatable="false">CgkIgpD2tZ8YEAIQDA</string>
    <!--achievement Total playtime of 10 hours-->
    <string name="achievement_total_playtime_of_10_hours" translatable="false">CgkIgpD2tZ8YEAIQDQ</string>
    <!--achievement Total playtime of 100 hours-->
    <string name="achievement_total_playtime_of_100_hours" translatable="false">CgkIgpD2tZ8YEAIQDg</string>
    <!--achievement Lose 10 games-->
    <string name="achievement_lose_10_games" translatable="false">CgkIgpD2tZ8YEAIQCw</string>
    <!--leaderboard Easy-->
    <string name="leaderboard_easy" translatable="false">CgkIgpD2tZ8YEAIQFQ</string>
    <!--leaderboard Normal-->
    <string name="leaderboard_normal" translatable="false">CgkIgpD2tZ8YEAIQFg</string>
    <!--leaderboard Hard-->
    <string name="leaderboard_hard" translatable="false">CgkIgpD2tZ8YEAIQAw</string>
    <!--leaderboard Extreme-->
    <string name="leaderboard_extreme" translatable="false">CgkIgpD2tZ8YEAIQBA</string>
</resources>