<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        >
        <TextView
            android:id="@+id/mistakesCounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/hintsCounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <fragment
                android:id="@+id/cellGroupFragment"
                android:name="com.attej.sudoku.backend.CellGroupFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="0"
                android:layout_weight="1" />

            <fragment
                android:id="@+id/cellGroupFragment2"
                android:name="com.attej.sudoku.backend.CellGroupFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="1"
                android:layout_weight="1" />

            <fragment
                android:id="@+id/cellGroupFragment3"
                android:name="com.attej.sudoku.backend.CellGroupFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="2"
                android:layout_weight="1" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <fragment
                android:id="@+id/cellGroupFragment4"
                android:name="com.attej.sudoku.backend.CellGroupFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="3"
                android:layout_weight="1" />

            <fragment
                android:id="@+id/cellGroupFragment5"
                android:name="com.attej.sudoku.backend.CellGroupFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="4"
                android:layout_weight="1" />

            <fragment
                android:id="@+id/cellGroupFragment6"
                android:name="com.attej.sudoku.backend.CellGroupFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="5"
                android:layout_weight="1" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <fragment
                android:id="@+id/cellGroupFragment7"
                android:name="com.attej.sudoku.backend.CellGroupFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="6"
                android:layout_weight="1" />

            <fragment
                android:id="@+id/cellGroupFragment8"
                android:name="com.attej.sudoku.backend.CellGroupFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="7"
                android:layout_weight="1" />

            <fragment
                android:id="@+id/cellGroupFragment9"
                android:name="com.attej.sudoku.backend.CellGroupFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="8"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785">
        <TableRow
            android:id="@+id/numButtonsTop"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:maxHeight="15sp"
            android:layout_marginStart="16dp"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/butt1"
                android:id="@+id/butt1"
                android:tag="1"
                android:onClick="onNumButtClicked"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/butt2"
                android:id="@+id/butt2"
                android:tag="2"
                android:onClick="onNumButtClicked"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/butt3"
                android:id="@+id/butt3"
                android:tag="3"
                android:onClick="onNumButtClicked"/>
        </TableRow>

        <TableRow
            android:id="@+id/numButtonsCenter"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:maxHeight="15sp"
            android:layout_marginStart="16dp"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/butt4"
                android:id="@+id/butt4"
                android:tag="4"
                android:onClick="onNumButtClicked"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/butt5"
                android:id="@+id/butt5"
                android:tag="5"
                android:onClick="onNumButtClicked"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/butt6"
                android:id="@+id/butt6"
                android:tag="6"
                android:onClick="onNumButtClicked"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:padding="10dp"
                android:minWidth="0dp"
                android:text="@string/butt_note"
                android:id="@+id/buttNote"
                android:onClick="onNoteButtClicked"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:padding="10dp"
                android:minWidth="0dp"
                android:text="@string/butt_del"
                android:id="@+id/del"
                android:onClick="onDelButtClicked"/>
        </TableRow>

        <TableRow
            android:id="@+id/numButtonsBot"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:maxHeight="15sp"
            android:layout_marginStart="16dp"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/butt7"
                android:id="@+id/butt7"
                android:tag="7"
                android:onClick="onNumButtClicked"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/butt8"
                android:id="@+id/butt8"
                android:tag="8"
                android:onClick="onNumButtClicked"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/butt9"
                android:id="@+id/butt9"
                android:tag="9"
                android:onClick="onNumButtClicked"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:padding="10dp"
                android:minWidth="0dp"
                android:text="@string/butt_hint"
                android:id="@+id/hint"
                android:onClick="onHintButtonClicked"/>

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:maxHeight="15sp"
        android:maxWidth="5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885"
        android:layout_marginStart="16dp"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stopWatch"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:maxHeight="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965"
        android:layout_marginStart="16dp"
        >
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onGoBackButtonClicked"
            android:text="@string/go_back"
            android:layout_marginEnd="35dp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>